# sandbox

./: LICENSE  README.md
benchmark/: .gitignore  README.md  benchmark.sh
benchmark/c/: main.c
benchmark/cpp/: main.cpp
benchmark/cs/: main.cs
benchmark/docs/: REQUIREMENTS.md
benchmark/go/: main.go
benchmark/java/: Main.java
benchmark/javascript/: main.js
benchmark/php/: main.php
benchmark/python/: main.py
benchmark/ruby/: main.rb
benchmark/rust/src/: main.rs
benchmark/typescript/: main.ts  package-lock.json
computer-vision-python/: inference_on_ytb.py  requirements.txt
expo-react-native-test/: app.json  package-lock.json  package.json
java-springboot-remedial/: README.md  pom.xml
rust-chatbox-websocket/: .env.example  Cargo.toml  Makefile  README.md
rust-chatbox-websocket/src/config/: mod.rs  settings.rs
rust-chatbox-websocket/tests/: config_test.rs
rust-chatroom-websocket/: .env.example  .gitignore  Cargo.toml  Makefile  README.md  compose.example.yaml  init.sql
rust-chatroom-websocket/public/: index.html
rust-chatroom-websocket/src/: lib.rs  main.rs
rust-chatroom-websocket/src/chat/: manager.rs  message.rs  mod.rs  room.rs
rust-chatroom-websocket/src/config/: mod.rs  settings.rs
rust-chatroom-websocket/src/db/: connection.rs  mod.rs
rust-chatroom-websocket/src/logging/: logger.rs  mod.rs
rust-chatroom-websocket/src/server/: mod.rs  router.rs  websocket.rs
rust-chatroom-websocket/static/: chat.js  index.html  styles.css
rust-chatroom-websocket/tests/: config_test.rs  logging_test.rs  main_test.rs
(+2 files in other folders)
