[package]
name = "rust-chatroom-websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = {version = "0.8.4", features=["ws"]}
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
flexi_logger = "0.31.8"
futures = "0.3.32"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version = "1.49.0", features=["full"]}
uuid = { version = "1.3", features = ["v4", "serde"] }
